--- a/4-turnOverLogin/login.css
+++ b/4-turnOverLogin/login.css
@@ -62,6 +62,7 @@ form{
   background-color: #FCFBFA;
   height: 100%;
   border-radius: 8px;
+  transform-style: preserve-3d;
 }
 .sign{
   transform: rotateY(180deg);
