--- a/10-aliDriverLogin/login.css
+++ b/10-aliDriverLogin/login.css
@@ -83,12 +83,11 @@ body{
 
 #form-bar{
   display: flex;
-
-  transition: transform .3s ease-in-out;
-  -webkit-transition: transform .3s ease-in-out;
-  -moz-transition: transform .3s ease-in-out;
-  -ms-transition: transform .3s ease-in-out;
-  -o-transition: transform .3s ease-in-out;
+  transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
+  -webkit-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
+  -moz-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
+  -ms-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
+  -o-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
 }
 
 .login-body form{
