--- a/10-aliDriverLogin/login.css
+++ b/10-aliDriverLogin/login.css
@@ -12,6 +12,7 @@ body{
   -moz-transform: translate(-50%);
   -ms-transform: translate(-50%);
   -o-transform: translate(-50%);
+  /* 在视频录制中会关掉插件,因为代码量已经比较大了,源代码中会给出 */
 }
 
 .login-app{
@@ -88,9 +89,23 @@ body{
   -moz-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
   -ms-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
   -o-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
+  transform: translateX(-100px);
+  /* 给定初值 */
+  -webkit-transform: translateX(-100px);
+  -moz-transform: translateX(-100px);
+  -ms-transform: translateX(-100px);
+  -o-transform: translateX(-100px);
 }
 
-.login-body form{
+#form-bar form-append{
+  width: 100px;
+  flex-shrink: 0;
+  /* 使之不可以缩 */
+  background-color: #fff;
+}
+
+#form-bar form
+{
   width: 348px;
   flex-shrink: 0;
   /* 使之不可以缩 */
@@ -99,6 +114,8 @@ body{
   box-sizing: border-box;
   padding: 22px;
   color: rgba(37, 38, 43, 0.36);
+
+  position: relative;
 }
 
 /* #message:checked~#form-bar{
