--- a/10-aliDriverLogin/login.css
+++ b/10-aliDriverLogin/login.css
@@ -91,6 +91,9 @@ body{
   -ms-border-radius: 0 0 20px 20px;
   -o-border-radius: 0 0 20px 20px;
   overflow: hidden;
+
+  background-color: #fff;
+  /* 也可以在#form-bar两边加一段, 我最开始采用的是那种方法哎 */
 }
 
 #form-bar{
@@ -100,13 +103,6 @@ body{
   -moz-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
   -ms-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
   -o-transition: transform .6s cubic-bezier(.25,.01,.25,1.3);
-  transform: translateX(-100px);
-  /*给定初值*/-webkit-transform: translateX(-100px);
-  -moz-transform: translateX(-100px);
-  -ms-transform: translateX(-100px);
-  -o-transform: translateX(-100px);
-  /*当然也可以用直接在背后垫个白底的方法*/
-  /*哎确实那方法不错,还能给两边来个不会在移动中显示form内容的白边*/
 }
 
 #form-bar form-append{
@@ -121,7 +117,6 @@ body{
   width: 348px;
   flex-shrink: 0;
   /* 使之不可以缩 */
-  background-color: #fff;
 
   box-sizing: border-box;
   padding: 22px;
