--- a/10-aliDriverLogin/login.css
+++ b/10-aliDriverLogin/login.css
@@ -60,6 +60,8 @@ body{
   text-align: center;
   background-color: #f5f5f6;
   margin: 0;
+
+  cursor: pointer;
 }
 .login-header .m-login-btn{
   border-radius: 12px 0 0 0;
@@ -82,6 +84,7 @@ body{
 #qrcode:checked~.q-login-btn{
   background-color: #fff;
   color: #25262B;
+  cursor: auto;
 }
 
 .login-body{
@@ -140,19 +143,27 @@ body{
 /* 只能等CSS4了... */
 
 
-.login-body input {
+.login-body input{
+  /* border: none; */
+  border: 1px solid transparent;
+  outline: none;
+
+
   width: 100%;
   height: 46px;
   background-color: rgba(39, 39, 41, 0.04);
   border-radius: 8px;
-  border: none;
-  outline: none;
 
   padding: 1px 12px;
   box-sizing: border-box;
+
   font-size: 14px;
 
   margin-bottom: 16px;
+}
+.login-body input:focus{
+  border: 1px solid rgba(99, 125, 255, 0.48);
+  background-color: #fff;
 }
 
 .login-body button{
