动态搜索框修正版 21.01.10
https://www.bilibili.com/video/BV1Pp4y1x77x/

--- a/1-searchBox/search_style.css
+++ b/1-searchBox/search_style.css
@@ -1,7 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-    background: #e94118;
+    /* background: #e94118; */
+    background-color: #FF670F;
 }
 
 .search-box{
@@ -13,6 +14,8 @@ body{
     height: 40px;
     border-radius: 40px;
     padding: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 .search-box:hover>.search-txt{
@@ -25,7 +28,6 @@ body{
 }
 
 .search-btn{
-    color: #e84118;
     float: right;
     width: 40px;
     height: 40px;
