--- a/4-turnOverLogin/login.css
+++ b/4-turnOverLogin/login.css
@@ -1,20 +1,41 @@
 body{
   background-color: #abdde8;
-  text-align: center;
+
   overflow: hidden;
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.fixed{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.form-demo{
+  position: relative;
+  
+  width: 400px;
+  height: 600px;
+}
+
+/* 切换按钮所在的白色区域 */
 .switch{
   background-color: #FCFBFA;
-  width: 400px;
+  width: 100%;
   height: 140px;
   position: absolute;
-  left: 50%;
-  margin-left: -200px;
-  top: 73%;
+  left: 0;
+  bottom: 0;
   border-radius: 8px;
+  text-align: center;
 }
+
+/* 切换按钮 */
 #change:checked+label,
 /* +用来选择同级后面最近的元素  */
 #change:not(:checked)+label{
@@ -26,21 +47,20 @@ body{
   font-size: 24px;
   font-weight: 600;
   position: absolute;
+  bottom: 22px;
   left: 50%;
-  margin-left: -140px;
-  top: 82%;
+  transform: translate(-50%);
   border-radius: 8px;
   cursor: pointer;
+  text-align: center;
 }
 
 /* 旋转体 */
 .turn{
-  width: 400px;
+  width: 100%;
   height: 400px;
   position: absolute;
-  left: 50%;
-  margin-left: -200px;
-  top: 8%;
+  top: 0;
   perspective: 800px;
   /* 旋转的时候的透视效果 */
 }
@@ -63,6 +83,7 @@ form{
   height: 100%;
   border-radius: 8px;
   transform-style: preserve-3d;
+  text-align: center;
 }
 .sign{
   transform: rotateY(180deg);
@@ -74,6 +95,8 @@ h1, h2{
 }
 h1{
   margin-top: 38px;
+  transform-style: preserve-3d;
+  transform: translate3d(0, 0, 1px);
 }
 
 input{
